<resources>
    <string name="app_name">SabPay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="password">Password</string>
    <string name="error_missing_permissions">Missing Permissions</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="e_mail">Email</string>
    <string name="register_email">Enter your email</string>

    <string name="default_notification_channel_id">110bgd6c</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="pay_order"><![CDATA[Pay & Order]]></string>
    <string name="place_order">Place Order</string>
    <string name="view_order_details">Order Details</string>
    <string name="pay">Pay</string>
    <string name="enter_delivery_address">Enter Delivery Address</string>
    <string name="show_more">Show More</string>
    <string name="_0">0</string>
    <string name="order_date">Order date</string>
    <string name="order">Order #</string>
    <string name="order_total">Order total</string>
    <string name="rupees">₹</string>
    <string name="payment_status">Payment Status</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="click_to_download_invoice">Click To Download Invoice</string>
    <string name="click_to_share_invoice">Click To Share Invoice</string>
    <string name="authority">com.visionio.sabpay.provider</string>
    <string name="delivery_pending">(Delivery Pending)</string>
    <string name="delivered">(Delivered)</string>
    <string name="order_not_confirmed">(Order Not Confirmed)</string>

    <string-array name="category">
        <item>Select one</item>
        <item>App Crash</item>
        <item>Wallet Related Issue</item>
        <item>Payment Related Issue</item>
        <item>Feature Issue</item>
    </string-array>

    <string-array name="subject">
        <item>Select one</item>
        <item>Payment failed but money deducted</item>
        <item>Money deducted from bank but not added to wallet</item>
        <item>GroupPay not working</item>
        <item>OffPay not working</item>
        <item>Qr scanner not working</item>
        <item>Other</item>
    </string-array>

    <string-array name="tag_category">
        <item>Beauty and Care</item>
        <item>Beverages</item>
        <item>Food and Grocery</item>
        <item>Fresh Produce</item>
        <item>Household</item>
        <item>Snacks</item>
    </string-array>

    <string-array name="Beauty_and_Care">
        <item>Baby</item>
        <item>Moisturizers_and_Lotions</item>
        <item>Personal_Care_1_shampoo3_toothpaste</item>
        <item>Pet_Care</item>
    </string-array>

    <string-array name="Beverages">
        <item>Beverages_1_Liquid</item>
        <item>Beverages_1_Solid</item>
    </string-array>

    <string-array name="Food_and_Grocery">
        <item>Frozen_Foods</item>
        <item>Grains</item>
        <item>Pasta_2_noodles</item>
        <item>Meat_2_Seafood</item>
        <item>Spice</item>
        <item>Oils_2_Ghee</item>
        <item>Sweetener</item>
        <item>Canned_Goods_2_Soups</item>
        <item>Dry_Fruits</item>
        <item>Ready1to1Use</item>
    </string-array>

    <string-array name="Fresh_Produce">
        <item>Fruits</item>
        <item>Vegetable</item>
        <item>Dairy</item>
        <item>Bread_2_Bakery</item>
    </string-array>

    <string-array name="Household">
        <item>Miscellaneous_1_gift_cards_2_wrap3_batteries3_etc4</item>
        <item>Paper_Products</item>
        <item>Cleaning_Supplies</item>
    </string-array>

    <string-array name="Snacks">
        <item>Sweet_Snacks</item>
        <item>Salted_Snacks</item>
        <item>Cookies</item>
    </string-array>
</resources>
