<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_20dp">

    <ScrollView
        android:id="@+id/order_detail_root_sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/order_detail_download_ibt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/click_to_download_invoice"
            android:layout_marginEnd="@dimen/dimen_18dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/contact_circle"
            android:tint="@color/white"
            android:src="@drawable/ic_baseline_arrow_downward_24"
            android:elevation="5dp"/>
        <ImageButton
            android:id="@+id/order_detail_share_ibt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/click_to_share_invoice"
            android:layout_marginEnd="@dimen/dimen_18dp"
            android:layout_toStartOf="@id/order_detail_download_ibt"
            android:background="@drawable/contact_circle"
            android:tint="@color/white"
            android:src="@drawable/ic_baseline_share_24"
            android:elevation="5dp"/>

        <TextView
            android:id="@+id/order_detail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_order_details"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="18dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
        <RelativeLayout
            android:id="@+id/rl_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_detail_tv"
            android:background="@drawable/et_custom"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:layout_marginTop="10dp">
            <RelativeLayout
                android:id="@+id/rl_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_date"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"/>
                <TextView
                    style="@style/order_detail_amount_text_style"
                    android:id="@+id/order_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="08/08/2020 3:22:00AM " />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_1"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"/>
                <TextView
                    style="@style/order_detail_amount_text_style"
                    android:id="@+id/order_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="hgfdsnbvhgfhggf " />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_2"
                android:layout_marginStart="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_total"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"/>
                <TextView
                    style="@style/order_detail_amount_text_style"
                    android:id="@+id/order_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="₹20"
                    />
            </RelativeLayout>
        </RelativeLayout>
        <TextView
            android:id="@+id/payment_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Payment Info"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="18dp"
            android:layout_below="@id/rl_main"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
        <RelativeLayout
            android:id="@+id/rl_payment_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/payment_info_tv"
            android:background="@drawable/et_custom"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:id="@+id/payment_info_ll_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_status"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:id="@+id/payment_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Paid through SabPay Balance"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/dimen_12dp" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/payment_info_ll_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/payment_info_ll_1"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shipping_address"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:id="@+id/shipment_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Some where on earth, in MilkyWay"
                    android:maxLines="4"
                    android:ellipsize="start"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/dimen_12dp"/>
            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:id="@+id/purchase_details_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Shipment Details"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="18dp"
            android:layout_below="@id/rl_payment_info"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>
        <TextView
            android:id="@+id/order_detail_shipment_status_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(Pending)"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="4dp"
            android:layout_below="@id/rl_payment_info"
            android:layout_toEndOf="@id/purchase_details_tv"
            android:textStyle="italic"
            android:textColor="@android:color/darker_gray"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/items_recycler_view"
            android:background="@drawable/et_custom"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@id/purchase_details_tv"
            android:layout_marginTop="10dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="20dp"
            tools:listitem="@layout/invoice_list_item"
            android:orientation="horizontal"
            android:padding="10dp"/>
        <Button
            android:id="@+id/invoice_activity_pay_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/pay"
            android:layout_below="@id/items_recycler_view"
            android:visibility="gone"/>
        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/order_detail_progressBar_pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SpinKitView.Large.Circle"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            app:SpinKit_Color="@color/purple"
            android:visibility="gone"/>
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>